meme_malware_rl/malware_rl_err.txt
Traceback (most recent call last):
  File "<string>", line 1, in <module>
  File "/mnt/d/model/meme_malware_rl/malware_rl/__init__.py", line 4, in <module>
    from malware_rl.envs.utils import interface
  File "/mnt/d/model/meme_malware_rl/malware_rl/envs/__init__.py", line 2, in <module>
    from malware_rl.envs.ember_gym import EmberEnv
  File "/mnt/d/model/meme_malware_rl/malware_rl/envs/ember_gym.py", line 10, in <module>
    from malware_rl.envs.controls import modifier
  File "/mnt/d/model/meme_malware_rl/malware_rl/envs/controls/modifier.py", line 375
    # embed()
            ^
SyntaxError: unexpected EOF while parsing
